--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
                 <h2>0BaraTTa</h2>
             </div> <!--logo-->
             <div class="menu">
-                <a href="#">
+                <a href="https://github.com/BaraTTa">
                     Home
                 </a>
-                <a href="#">
+                <a href="https://github.com/BaraTTa">
                     Sobre
                 </a>
-                <a href="#">
+                <a href="https://github.com/BaraTTa">
                     Contato
                 </a>
-                <a href="#" class="btnmenu">
+                <a href="https://github.com/BaraTTa" class="btnmenu">
                     Get Started
                 </a>
             </div><!--menu-->
             <div class="menu-mobile">
                 <i class="fa-solid fa-bars menu-mobile-icon"></i>
                 <div class="menu-items">
-                    <a href="">Home</a>
-                    <a href="">Sobre</a>
-                    <a href="">Contato</a>
+                    <a href="https://github.com/BaraTTa">Home</a>
+                    <a href="https://github.com/BaraTTa">Sobre</a>
+                    <a href="https://github.com/BaraTTa">Contato</a>
                 </div><!--menu-items-->
             </div><!--menu-mobile-->
         </div> <!--center-->
