--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="main__cta">
                 <h2>Desbravando o mundo dos Games</h2>
                 <p>We are CAPSULE CORP</p>
-                <button>Get Started</button>
+                <button><a href="https://github.com/AthilaAlexandre">Get Started</a></button>
             </div><!--main__cta-->
 
 
